# advent_of_code

./: .gitignore  .gitmodules  CMakeLists.txt  get_data.py  run_qrpi.sh
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  day_18.data.json  day_18.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  re.data.json  re.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
2015/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
2016/: cheat_20.py  day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp
2017/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
2018/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_23.cpp
2019/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_22.cpp
2020/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_19.py  day_21.py  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
2021/: day_01.cpp  day_01.hs  day_02.cpp  day_02.hs  day_03.cpp  day_03.hs  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp
arm32/: Makefile
c/: CMakeLists.txt
cpp/: CMakeLists.txt  README.md
cpp/includes/: md5.cpp
cpp/src/: main.cpp
cpp/src/2015/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
cpp/src/2016/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
cpp/src/2017/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
cpp/src/2018/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_20.cpp  day_22.cpp  day_23.cpp
cpp/src/2019/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_17.cpp  day_22.cpp
cpp/src/2020/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.py  day_19.py  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
cpp/src/2021/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_25.cpp
cpp/src/2022/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp
cpp/src/2023/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_13.cpp  day_15.cpp
cpp/src/2024/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp
cpp/src/2025/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp
cpp/src/utils/: combinatorics.hpp  geometry.hpp  geometry.tpp  input.cpp  input.hpp  tree.hpp
cpp/tests/: GeometryUnitTests.cpp  HexgridUnitTests.cpp  InputUnitTests.cpp  TreeUnitTests.cpp
haskell/: README.md  haskell.cabal  package.yaml  stack.yaml
tests/: DataUnitTests.cpp  GeometryUnitTests.cpp  GraphUnitTests.cpp  HexgridUnitTests.cpp  InputUnitTests.cpp  TreeUnitTests.cpp  UtilsUnitTests.cpp
utils/: combinatorics.hpp  data.hpp  data.tpp  geometry.hpp  geometry.tpp  graph.hpp  graph.tpp  hexgrid.cpp  hexgrid.hpp  input.cpp  input.hpp  tree.hpp  tree.tpp
(+97 files in other folders)
